fix: reduce padding to fix layout problem on route page

--- a/app/component/front-page.scss
+++ b/app/component/front-page.scss
@@ -354,7 +354,7 @@ div.route-tabs .tabs-navigation.bp-large {
 
     .vehicle-number {
       vertical-align: text-bottom;
-      padding-left: 0.4em;
+      padding-left: 0.2em;
     }
   }
 
